# vscode-cpp-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: main.cpp
test/: test.cpp
